syntax = "proto3";

package layer.querydatastorage;

option go_package = "layer/x/querydatastorage/types";

// Msg defines the Msg service.
service Msg {
  rpc AddQueryToStorage (MsgAddQueryToStorage) returns (MsgAddQueryToStorageResponse);
}
message MsgAddQueryToStorage {
  string creator    = 1;
  string queryType  = 2;
  repeated string dataTypes  = 3;
  repeated string dataFields = 4;
}

message MsgAddQueryToStorageResponse {
  string queryId = 1;
}

